clear lombok